--- a/packages/web-ui/components.json
+++ b/packages/web-ui/components.json
@@ -14,7 +14,7 @@
 		"components": "@web-ui/components",
 		"utils": "@web-ui/lib/utils",
 		"ui": "@web-ui/components/ui",
-		"lib": "@web-io/lib",
+		"lib": "@web-ui/lib",
 		"hooks": "@web-ui/hooks"
 	},
 	"iconLibrary": "lucide"
