--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
 		"check": "bunx biome check --write"
 	},
 	"dependencies": {
-		"@packages/core": "workspace:*",
+		"@packages/web-ui": "workspace:*",
 		"next": "^15.5.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0"
